# pages/api/swagger.json
@@ -1728,6 +1728,81 @@
           }
         ]
       }
+    },
+    "/api/quizzes/create": {
+      "post": {
+        "summary": "Create a new quiz",
+        "description": "Creates a new quiz.",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "title": {
+                    "type": "string",
+                    "description": "Title of the quiz"
+                  },
+                  "description": {
+                    "type": "string",
+                    "description": "Description of the quiz"
+                  },
+                  "courseId": {
+                    "type": "string",
+                    "description": "ID of the course associated with the quiz"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Quiz created successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    },
+                    "quiz": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/Quiz"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error_code": {
+                      "type": "string"
+                    },
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "tags": [
+          "Quizzes"
+        ]
+      }
     }
   },
   "components": {
@@ -1884,6 +1959,30 @@
         "required": [
           "name",
           "partner_image"
+        ]
+      },
+      "Quiz": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "title": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "courseId": {
+            "type": "string",
+            "format": "uuid"
+          }
+        },
+        "required": [
+          "title",
+          "description",
+          "courseId"
         ]
       },
       "CourseList": {
